# GP2Framework

./: .gitignore  CMakeLists.txt
Game/: CMakeLists.txt
Game/include/: GameApplication.h
Game/include/Renderer/: Renderer.h
Game/include/Utils/: CommandLineParser.h  ConfigParser.h
Game/src/: CommandLineParser.cpp  ConfigParser.cpp  GameApplication.cpp
MyGame/: CMakeLists.txt  config.ini
MyGame/include/: MyGameApp.h
MyGame/src/: MyGameApp.cpp  main.cpp
OpenGLRenderer/: CMakeLists.txt
OpenGLRenderer/include/: OpenGLRenderer.h
OpenGLRenderer/src/: OpenGLRenderer.cpp
modules/: FindSDL2.cmake
